fix: add margin-bottom to apps grid for improved spacing

--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -109,6 +109,7 @@
   grid-template-columns: repeat(3, 1fr);
   gap: 2rem;
   margin-top: 0rem;
+  margin-bottom: 2rem;
 
   @media (max-width: 767.98px) {
     grid-template-columns: repeat(2, 1fr);
